--- a/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem.csproj
+++ b/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
