--- a/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/appsettings.json
+++ b/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=SubsystemDB;UserId=postgres;Password=7244;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
