Update all project

--- a/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/appsettings.json
+++ b/Diploma_Curator_Subsystem/Diploma_Curator_Subsystem/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=SubsystemDB;UserId=postgres;Password=7244;"
-    //"DefaultConnection": "Server=89.223.28.248;Port=5432;Database=web-service;UserId=web-service;Password=qyVhrNdpp45CCat5Rem9WAR6;"
+    //"DefaultConnection": "Server=localhost;Port=5432;Database=SubsystemDB;UserId=postgres;Password=7244;"
+    "DefaultConnection": "Server=89.223.28.248;Port=5432;Database=web-service;UserId=web-service;Password=qyVhrNdpp45CCat5Rem9WAR6;"
   },
   "Logging": {
     "IncludeScopes": false,
